--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,10 @@
 [build]
   command = "npm run build"
-  publish = "out"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--legacy-peer-deps"
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
-  status = 200
+  NPM_FLAGS = "--production=false"
 
 [[redirects]]
   from = "/*"
